syntax = "proto3";

option csharp_namespace = "Server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GreetManyTimes (GreetingRequest) returns (stream GreetingResponse);
  rpc LongGreet (stream GreetingRequest) returns (GreetingResponse);
  rpc GreetEveryone (stream GreetingRequest) returns (stream GreetingResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GreetingRequest {
	Greeting greeting = 1;
}

message GreetingResponse {
	string result = 1;
}
